<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="department"
            type="small.app.shopping.list.models.Department" />

    </data>


    <LinearLayout
        android:id="@+id/ll_departments"
        android:layout_width="@dimen/department_width"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_rv_dp_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_dep_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ib_newItems"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_increase_qty"
                tools:ignore="SpeakableTextPresentCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:listitem="@layout/item_grossery_item" />

    </LinearLayout>

</layout>