<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        tools:context=".fragments.ListFragment"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/ll_stores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/s_store_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/ib_add_store"
                android:layout_width="@dimen/min_dim_size"
                android:layout_height="@dimen/min_dim_size"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="0"
                android:background="@color/design_default_color_primary"
                app:srcCompat="@drawable/ic_add"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_departments"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/act_departmentName"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/min_dim_size"
                    android:layout_weight="0.8"
                    android:completionThreshold="1"
                    android:hint="@string/new_department_name"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ib_add_department"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageButton
                    android:id="@+id/ib_add_department"
                    android:layout_width="@dimen/min_dim_size"
                    android:layout_height="@dimen/min_dim_size"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:background="@color/design_default_color_primary"
                    android:contentDescription="@string/new_dep_cd"
                    android:src="@drawable/ic_validate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="@dimen/default_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_department"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible">

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>


            </androidx.core.widget.NestedScrollView>


        </LinearLayout>

    </LinearLayout>


</layout>