<resources>
    <string name="app_name">Shopping List</string>

    <string name="actv_item">Item name</string>
    <string name="actv_store">Store name</string>
    <string name="tabListName">List</string>
    <string name="tabListNameParameters">Parameters</string>
    <string name="new_department_name">Department name</string>
    <string name="no_department_nor_item">No department nor item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="full_screen">Full Screen View</string>
    <string name="item_hint">Enter item name</string>
    <string name="ok">OK</string>
    <string name="add_new_item">Add new item</string>
    <string name="add_new_store">Add new store</string>
    <string name="drag_drop_cd">Drag and drop item between department</string>
    <string name="increase_quantity_cd">Increase quantity</string>
    <string name="decrease_quantity_cd">Decrease quantity</string>
    <string name="new_dep_cd">Add new department or reuse existing one</string>
    <string name="new_item_cd">Add a new item or reuse an existing one</string>
    <string name="check_item_cd">Declare the item as picked</string>
    <string name="reorder_item_cd">Reorder item</string>
    <string name="delete_item_cd">Delete item</string>
    <string name="export_lst">Export</string>
    <string name="import_list">Import</string>
    <string name="import_done">Import done</string>
    <string name="default_category_name">Unclassified</string>
    <string name="default_category_deletion_message">You can not delete the default category</string>
    <string name="no_store">Create a store before creating department</string>
</resources>